ndiswrapper (1.38-1) unstable; urgency=low

  * New upstream release.

 -- Kel Modderman <kel@otaku42.de>  Sun,  4 Mar 2007 10:30:51 +1000

ndiswrapper (1.37-1) unstable; urgency=low

  * New upstream release. (Closes: #410164)
    - fixes quirks with sis163u ndis driver (Closes: #400320)
    - compiles against linux 2.6.20+
  * Reported to be working with Netgear MA111 device again. Thanks for the
    feedback Bernhard. (Closes: 407182)
  * Recommend linux-image-_KVERS_ and not the non-existant
    kernel-image-_KVERS_. (Closes: #388822)

 -- Kel Modderman <kel@otaku42.de>  Thu,  8 Feb 2007 20:42:17 +1000

ndiswrapper (1.36-1) unstable; urgency=low

  * NOT RELEASED.
  * New upstream release.

 -- Kel Modderman <kel@otaku42.de>  Sat,  3 Feb 2007 00:01:39 +1000

ndiswrapper (1.34-1) unstable; urgency=low

  * NOT RELEASED
  * New upstream release.
  * Drop m4 templates, they were littering the diff.gz, and probably required
    more maintenance burden that the seldom version bump of the utilities that
    upstream demands.
  * Update Uploaders email address.

 -- Kel Modderman <kel@otaku42.de>  Fri, 26 Jan 2007 11:35:16 +1000

ndiswrapper (1.30-1) unstable; urgency=low

  * New upstream release.

 -- Kel Modderman <kelmo@kanotixguide.org>  Tue, 28 Nov 2006 23:44:38 +1000

ndiswrapper (1.28-1) unstable; urgency=low

  [ Kel Modderman ]
  * New upstream release.
  * Introduce m4 templates plus maintainer script (m4-control) to make
    adapting to new upstream ndiswrapper-utils versions easier.
  * Drop all debhelper files for ndiswrapper-utils-VERS, instead handle the
    installation of required files in debian/rules only.
  * Use distclean target in kdist_clean.
  * Change of co-maintainer email address.
  * Correctly annotate LGPL licensed portion of upstream files in
    debian/copyright.
  * Create /etc/ndiswrapper directory in ndiswrapper-common to stop
    `ndiswrapper -l' from complaining on first use.

  [ Andres Salomon ]
  * Ack NMU (closes: #389171).