@@ -1,8 +1,8 @@
 Source: ndiswrapper
 Section: misc
 Priority: optional
-Maintainer: Andres Salomon <dilinger@debian.org>
-Uploaders: Kel Modderman <kel@otaku42.de>
+Maintainer: Kel Modderman <kel@otaku42.de>
+Uploaders: Andres Salomon <dilinger@debian.org>, Daniel Baumann <daniel@debian.org>
 Standards-Version: 3.7.2
 Build-Depends: debhelper (>= 5.0.37), cdbs, bzip2, patchutils
 
@@ -22,7 +22,7 @@ Description: Common scripts required to use the utilities for ndiswrapper
  This package contains wrapper scripts to call out to the proper
  versions of whatever -utils-X.X package is installed.
  .
- http://ndiswrapper.sourceforge.net/
+  Homepage: http://ndiswrapper.sourceforge.net/
 
 Package: ndiswrapper-utils-1.9
 Architecture: i386 amd64
@@ -39,7 +39,7 @@ Description: Userspace utilities for the ndiswrapper linux kernel module
  This package contains the userspace tools. You will also need the kernel
  module package.
  .
- http://ndiswrapper.sourceforge.net/
+  Homepage: http://ndiswrapper.sourceforge.net/
 
 Package: ndiswrapper-source
 Architecture: all
@@ -56,4 +56,4 @@ Description: Source for the ndiswrapper linux kernel module
  This package provides the source code for the NdisWrapper kernel module.
  Kernel source is required to compile this module.
  .
- http://ndiswrapper.sourceforge.net/
+  Homepage: http://ndiswrapper.sourceforge.net/
