@@ -1,8 +1,8 @@
 Source: ndiswrapper
 Section: misc
 Priority: optional
-Maintainer: Andres Salomon <dilinger@debian.org>
-Uploaders: Kel Modderman <kel@otaku42.de>
+Maintainer: Kel Modderman <kel@otaku42.de>
+Uploaders: Andres Salomon <dilinger@debian.org>, Daniel Baumann <daniel@debian.org>
 Build-Depends: debhelper (>= 5.0.37), bzip2
 Standards-Version: 3.7.2
 
