@@ -1,8 +1,8 @@
 This package was debianized by Erik Rigtorp <erkki@linux.nu> on
 Mon, 23 Feb 2004 17:48:38 +0100.
 
-This package is currently maintained by Andres Salomon <dilinger@debian.org>
-and Kel Modderman <kelmo@kanotixguide.org> as of Oct. 2006.
+This package is currently maintained by Kel Modderman <kel@otaku42.de>
+as of March 2007.
 
 It was downloaded from http://ndiswrapper.sourceforge.net/
 
