@@ -6,6 +6,8 @@ include /usr/share/cdbs/1/class/makefile.mk
 
 DEB_MAKE_INVOKE = $(MAKE) -C utils
 
+UVERS := $(shell dpkg-parsechangelog | sed -n 's/^Version: \(.*\)-.*/\1/p')
+
 install/ndiswrapper-source::
 	mkdir -p modules/ndiswrapper/debian
 	cp -ra driver/* modules/ndiswrapper
@@ -25,3 +27,8 @@ install/ndiswrapper-utils-1.9::
 		debian/ndiswrapper-utils-1.9/usr/share/man/man8/loadndisdriver-1.9.8
 	install -D -m644 ndiswrapper.8 \
 		debian/ndiswrapper-utils-1.9/usr/share/man/man8/ndiswrapper-1.9.8
+
+get-orig-source:
+	@test -d ../tarballs || mkdir -p ../tarballs
+	@wget -Nc -T10 -O ../tarballs/ndiswrapper_$(UVERS).orig.tar.gz \
+		http://optusnet.dl.sourceforge.net/sourceforge/ndiswrapper/ndiswrapper-$(UVERS).tar.gz
