@@ -1,0 +1,2 @@
+version=3
+http://sf.net/ndiswrapper/ndiswrapper-(.*)\.tar\.gz debian uupdate
